--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components{
+    .navLink{
+        @apply hover:underline decoration-red-500 text-center decoration-2 active:underline underline-offset-8
+        rounded-full p-4 cursor-pointer hover:font-bold capitalize hover:scale-110 transition-transform duration-200 ease-out;  
+    }
+}
+
 .slide-up{
     animation: slideUp 0.75s linear forwards;
 }
